# HelloWorld-sqlite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  dependency.md  reconfigure.sh
cmake/: AddExternalLibraries.txt  FindSQLite3.cmake
include/: dbAccess.h  goodbyePrinter.h  helloPrinter.h
src/: dbAccess.cpp  goodbyePrinter.cpp  hello.cpp  helloPrinter.cpp  main.cpp
test/: error_helloPrinter.cpp  output_helloPrinter.cpp  sampleDB.cpp  test_helloPrinter.cpp
tools/: buildSqlite3.bat
tools/buildSqlite3/: README.md  buildSqlite3.bat
